[gd_scene load_steps=8 format=4 uid="uid://c5tdj7lug6o2g"]

[ext_resource type="Script" path="res://scripts/level_signals.gd" id="1_w64fc"]
[ext_resource type="Script" path="res://scripts/tile_map_manager.gd" id="2_em1b2"]
[ext_resource type="Shader" path="res://shaders/pt.gdshader" id="3_3tlqi"]
[ext_resource type="TileSet" uid="uid://dcuwr885x5o64" path="res://resources/MainTileSet.tres" id="4_oetw8"]
[ext_resource type="PackedScene" uid="uid://5hyunbfu11ky" path="res://scenes/flag.tscn" id="7_5emx8"]
[ext_resource type="PackedScene" uid="uid://dacyksh0vdcf1" path="res://scenes/car.tscn" id="8_bicmj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jvw0m"]
shader = ExtResource("3_3tlqi")

[node name="BaseLevel" type="Node2D"]
script = ExtResource("1_w64fc")
CARDS = Array[int]([1, 2, 3])

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="TileMaps" type="Node2D" parent="." node_paths=PackedStringArray("ROAD_LAYER", "WALL_LAYER", "OBJECT_LAYER")]
script = ExtResource("2_em1b2")
ROAD_LAYER = NodePath("RoadLayer")
WALL_LAYER = NodePath("WallLayer")
OBJECT_LAYER = NodePath("ObjectLayer")

[node name="TileMapLayer" type="TileMapLayer" parent="TileMaps"]
z_index = -100
material = SubResource("ShaderMaterial_jvw0m")
scale = Vector2(8, 8)
tile_map_data = PackedByteArray("AAAJAAgAAAAEAAkAAAAJAAcAAAAGAAgAAAAJAAYAAAAEAAkAAAAJAAUAAAAEAAkAAAAJAAQAAAAEAAgAAAAJAAMAAAAEAAkAAAAJAAIAAAAEAAkAAAAJAAEAAAAEAAkAAAAIAAEAAAAEAAkAAAAHAAEAAAAEAAkAAAAGAAEAAAAEAAkAAAAFAAEAAAAEAAkAAAAEAAEAAAAEAAkAAAADAAEAAAAGAAgAAAACAAEAAAAEAAkAAAABAAEAAAAEAAkAAAABAAIAAAAEAAgAAAABAAMAAAAEAAkAAAABAAQAAAAEAAkAAAABAAUAAAAEAAkAAAABAAYAAAAEAAkAAAABAAcAAAAEAAkAAAABAAgAAAAEAAkAAAACAAgAAAAEAAkAAAACAAcAAAAEAAkAAAACAAYAAAAGAAgAAAACAAUAAAAEAAkAAAACAAQAAAAEAAkAAAACAAMAAAAEAAkAAAACAAIAAAAEAAgAAAADAAIAAAAEAAgAAAADAAMAAAAEAAkAAAADAAQAAAAEAAkAAAADAAUAAAAEAAkAAAADAAYAAAAEAAkAAAADAAcAAAAEAAkAAAADAAgAAAAEAAkAAAAEAAgAAAAEAAkAAAAEAAcAAAAEAAkAAAAEAAYAAAAEAAkAAAAEAAUAAAAEAAkAAAAEAAQAAAAEAAkAAAAEAAMAAAAGAAgAAAAEAAIAAAAEAAgAAAAFAAIAAAAFAAgAAAAFAAMAAAAFAAkAAAAFAAQAAAADAAoAAAAFAAUAAAAEAAkAAAAFAAYAAAAEAAkAAAAFAAcAAAAEAAkAAAAFAAgAAAAGAAgAAAAGAAgAAAAEAAkAAAAGAAcAAAAEAAkAAAAGAAYAAAAGAAgAAAAGAAUAAAAEAAkAAAAGAAQAAAAEAAgAAAAGAAMAAAAEAAkAAAAGAAIAAAAEAAkAAAAHAAIAAAAEAAkAAAAHAAMAAAAEAAkAAAAHAAQAAAAHAAgAAAAHAAUAAAAFAAkAAAAHAAYAAAAFAAkAAAAHAAcAAAAFAAkAAAAHAAgAAAAFAAkAAAAIAAgAAAAEAAkAAAAIAAcAAAAEAAkAAAAIAAYAAAAEAAkAAAAIAAUAAAAEAAkAAAAIAAQAAAAEAAgAAAAIAAMAAAAGAAgAAAAIAAIAAAAEAAkAAAAKAAgAAAAEAAkAAAAKAAcAAAAEAAkAAAAKAAYAAAAEAAkAAAAKAAUAAAAGAAgAAAAKAAQAAAAEAAgAAAAKAAMAAAAEAAkAAAAKAAIAAAAEAAkAAAAKAAEAAAAEAAkAAAALAAEAAAAEAAkAAAALAAIAAAAEAAkAAAALAAMAAAAEAAkAAAALAAQAAAAEAAgAAAALAAUAAAAEAAkAAAALAAYAAAAEAAkAAAALAAcAAAAEAAkAAAALAAgAAAAGAAgAAAAMAAgAAAADAAoAAAAMAAcAAAAFAAkAAAAMAAYAAAAFAAkAAAAMAAUAAAAFAAkAAAAMAAQAAAAHAAkAAAAMAAMAAAAFAAkAAAAMAAIAAAAFAAkAAAAMAAEAAAAFAAkAAAANAAEAAAAEAAkAAAANAAIAAAAGAAgAAAANAAMAAAAEAAkAAAANAAQAAAAEAAgAAAANAAUAAAAGAAgAAAANAAYAAAAEAAkAAAANAAcAAAAEAAkAAAANAAgAAAAEAAgAAAAOAAgAAAAFAAgAAAAOAAcAAAAGAAgAAAAOAAYAAAAEAAkAAAAOAAUAAAAEAAkAAAAOAAQAAAAEAAgAAAAOAAMAAAAEAAkAAAAOAAIAAAAEAAkAAAAOAAEAAAAEAAkAAAAAAAAAAAAEAAkAAAAAAAEAAAAEAAkAAAAAAAIAAAAEAAgAAAAAAAMAAAAEAAkAAAAAAAQAAAAGAAgAAAAAAAYAAAAEAAkAAAAAAAcAAAAEAAkAAAAAAAUAAAAEAAkAAAAAAAgAAAAGAAgAAAABAAAAAAAEAAkAAAACAAAAAAAEAAkAAAADAAAAAAAEAAkAAAAEAAAAAAAEAAkAAAAFAAAAAAAGAAgAAAAGAAAAAAAEAAkAAAAHAAAAAAAEAAkAAAAIAAAAAAAEAAkAAAAJAAAAAAAEAAkAAAAKAAAAAAAEAAkAAAALAAAAAAAGAAgAAAAMAAAAAAAFAAkAAAANAAAAAAAEAAkAAAAOAAAAAAAEAAkAAAA=")
tile_set = ExtResource("4_oetw8")
collision_enabled = false
navigation_visibility_mode = 1
metadata/_edit_lock_ = true

[node name="RoadLayer" type="TileMapLayer" parent="TileMaps"]
visible = false
z_index = -100
material = SubResource("ShaderMaterial_jvw0m")
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAAEAAQAAAAEAAUAAAAFAAQAAAAEAAUAAAAGAAQAAAAEAAUAAAAHAAQAAAAEAAUAAAAIAAQAAAAEAAUAAAAJAAQAAAAEAAUAAAAEAAUAAAAEAAcAAAAFAAUAAAAEAAcAAAAGAAUAAAAEAAcAAAAHAAUAAAAEAAcAAAAIAAUAAAAEAAcAAAAJAAUAAAAEAAcAAAALAAYAAAAFAAYAAAALAAcAAAAFAAYAAAAPAAcAAAAFAAYAAAAPAAYAAAAFAAYAAAAKAAcAAAADAAYAAAAKAAYAAAADAAYAAAAOAAYAAAADAAYAAAAOAAcAAAADAAYAAAAOAAQAAAAFAAUAABAMAAkAAAAEAAcAAAANAAkAAAAEAAcAAAANAAgAAAAEAAUAAAAMAAgAAAAEAAUAAAAKAAgAAAADAAYAAAAKAAkAAAADAAcAAAALAAgAAAAEAAYAAAALAAkAAAAEAAcAAAAOAAgAAAAEAAYAACAOAAkAAAAEAAUAACAPAAgAAAAFAAYAACAPAAkAAAAFAAUAACAKAAQAAAAEAAUAAAAKAAUAAAAEAAYAAAALAAQAAAAFAAUAAAALAAUAAAAFAAYAAAAPAAQAAAAEAAUAABAPAAUAAAAEAAYAABAOAAUAAAAFAAYAABAQAAQAAAAEAAUAAAAQAAUAAAAEAAcAAAARAAQAAAAEAAUAAAARAAUAAAAEAAcAAAASAAQAAAAEAAUAAAASAAUAAAAEAAcAAAATAAQAAAAEAAUAAAATAAUAAAAEAAcAAAAUAAQAAAAEAAUAAAAUAAUAAAAEAAUAACAVAAQAAAAFAAUAAAAVAAUAAAAFAAUAACA=")
tile_set = ExtResource("4_oetw8")
collision_enabled = false
navigation_visibility_mode = 1
metadata/_edit_lock_ = true

[node name="WallLayer" type="TileMapLayer" parent="TileMaps"]
z_index = -100
scale = Vector2(8, 8)
tile_set = ExtResource("4_oetw8")
navigation_visibility_mode = 1
metadata/_edit_lock_ = true
metadata/Tag = "Wall"

[node name="ObjectLayer" type="TileMapLayer" parent="TileMaps"]
z_index = -100
scale = Vector2(8, 8)
tile_set = ExtResource("4_oetw8")
navigation_visibility_mode = 1
metadata/_edit_lock_ = true
metadata/Tag = "ObjectLayer"

[node name="Objects" type="Node" parent="."]
metadata/_edit_lock_ = true

[node name="Flag" parent="Objects" instance=ExtResource("7_5emx8")]
position = Vector2(1600, 128)

[node name="Car" parent="Objects" node_paths=PackedStringArray("TILEMAP_MANAGER") instance=ExtResource("8_bicmj")]
position = Vector2(128, 320)
TILEMAP_MANAGER = NodePath("../../TileMaps")

[node name="Timers" type="Node" parent="."]

[node name="Global Tick" type="Timer" parent="Timers"]
wait_time = 0.5
autostart = true

[connection signal="LevelComplete" from="Objects/Car" to="." method="_on_car_level_complete"]
[connection signal="LevelExit" from="Objects/Car" to="." method="_on_car_level_exit"]
[connection signal="LevelRestart" from="Objects/Car" to="." method="_on_car_level_restart"]
[connection signal="timeout" from="Timers/Global Tick" to="Objects/Car" method="_on_global_tick_timeout"]
